Fix dark mode icon

--- a/css/index.css
+++ b/css/index.css
@@ -45,14 +45,6 @@ body {
   align-items: center;
   transition: background-color 0.3s ease;
 }
-#github-a {
-  display: flex;
-  align-items: center;
-}
-#linkedin-a {
-  display: flex;
-  align-items: center;
-}
 #header-contact-me-pill {
   background-color: white;
   color: black;
@@ -69,7 +61,7 @@ body {
 #header-contact-me-pill:hover {
   background-color: rgb(220, 220, 220);
 }
-.dark-mode-btn {
+.top-icons {
   background: none;
   border: none;
   font-size: 24px;
@@ -78,8 +70,10 @@ body {
   border-radius: 50%;
   margin-right: 3vh;
   transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
 }
-.dark-mode-btn:hover {
+.top-icons:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
